# elastix

./: .gitignore  README.md  package.sh
src/: CMakeLists.txt  ElastixConfig.cmake.in  ElastixConfigVersion.cmake.in
src/CMake/: UseElastix.cmake.in
src/Components/Optimizers/AdaptiveStochasticGradientDescent/: elxAdaptiveStochasticGradientDescent.hxx
src/Core/Kernel/: elxElastixMain.cxx
src/Core/Main/: elastixlib.cxx  elastixlib.h  transformixlib.cxx
